Added Redux with actions for handling data

--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -1,4 +1,11 @@
 .dialogs {
+    &-wrapper {
+        height: 100%;
+    }
+
+    height: calc(100% - 100px);
+    overflow: auto;
+
     &__search {
         margin-bottom: 20px;
     }
