--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -197,7 +197,7 @@
 
   &__bubble {
     max-width: 400px;
-    background: $purple;
+    background: $cyan;
     box-shadow: 0 5px 5px rgba(54, 116, 255, .2);
     border-radius: 12px 12px 12px 0;
     padding: 15px;
