--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
-$purple: #6e1070;
+$cyan: #40a9ff;
 $black: #202020;
 $green: #d5f5ee;
+$lightgray: #c1c1c1;
 
-$message-typing-gray: #c1c1c1;
+$message-typing-gray: $lightgray;
