--- a/src/components/Avatar/avatar.scss
+++ b/src/components/Avatar/avatar.scss
@@ -5,7 +5,7 @@
     
     &--empty {
         color: #ffffff;
-        font-display: to-upper-case;
+        text-transform: capitalize;
         font-size: 30px;
         font-weight: 500;
         display: flex;
