--- a/src/components/DialogItem/DialogsItem.scss
+++ b/src/components/DialogItem/DialogsItem.scss
@@ -8,7 +8,7 @@
         transition: background-color .2s ease-in, color .2s ease-in;
         cursor: pointer;
         border-radius: 5px;
-        width: 300px;
+        width: 100%;
 
         &.active,
         &:hover {
@@ -71,6 +71,10 @@
                     font-size: 14px;
                     flex: 1;
                     margin-bottom: 5px;
+
+                    &::first-letter {
+                        text-transform: capitalize;
+                    }
                 }
 
                 span {
