Minor bugfix, styles correction, displaying messages in dialog implmentation

--- a/src/components/DialogItem/DialogsItem.scss
+++ b/src/components/DialogItem/DialogsItem.scss
@@ -12,7 +12,7 @@
 
         &.active,
         &:hover {
-            background-color: #6f3671;
+            background-color: #66b3f9;
             color: #ffffff;
         }
 
