--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -19,12 +19,15 @@
         &-header {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 30px;
             font-size: 20px;
 
             .anticon-team {
                 margin-right: 10px;
             }
+        }
+
+        &-search {
+            margin: 10px 0;
         }
 
         &-dialogs {
