--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -6,10 +6,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #fff;
 
     .ant-input {
         margin: 0 20px;
-        padding: 20px;
         width: 85%;
     }
 
@@ -32,19 +32,25 @@
         overflow: hidden;
     }
 
+    &__send-dick {
+        width: 32px;
+        height: 32px;
+        cursor: pointer;
+    }
+
     &__emoji-picker {
-        opacity: 0;
-        transition: transform .15s ease-out, opacity .4s ease-out;
-        transform: translateY(105%);
         height: 100%;
+        display: none;
+        position: absolute;
+        bottom: 430px;
+        left: 0px;
 
         &--visible {
-            opacity: 1;
-            transform: translateY(0);
+            display: block;
         }
 
         .emoji-mart {
-            position: relative;
+            position: absolute;
 
             &::after,
             &::before {
