--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -2,8 +2,15 @@
 
 .messages {
   height: 100%;
-  padding: 20px;
-  overflow: auto;
+  padding-right: 15px;
+  width: 100%;
+  overflow-y: scroll;
+  box-sizing: content-box;
+
+  &-wrapper {
+    padding: 15px;
+    padding-right: 0;
+  }
 
   &--loading {
     display: flex;
