--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -13,8 +13,8 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
 
     &__sidebar {
+        width: 356px;
         padding: 15px;
-        border-right: 1px solid rgba(0, 0, 0, .15);
 
         &-header {
             display: flex;
@@ -53,14 +53,15 @@
     &__dialog {
         width: 76%;
         position: relative;
+        border-right: 15px solid white;
 
         &-header {
+            background-color: #fff;
             padding: 10px;
-            border: 1px solid rgba(0, 0, 0, .15);
-            border-left: 0;
-            border-right: 0;
             margin-bottom: 5px;
             border-radius: 2px;
+            position: relative;
+            height: 60px;
         }
 
         &-header-info {
@@ -76,51 +77,24 @@
             font-size: 20px;
         }
 
-        &-options {
-            &-wrapper {
-                right: 0;
-                top: 0;
-                position: absolute;
-                cursor: pointer;
-                width: 50px;
-                height: 50px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            &,
-            &::after,
-            &::before {
-                cursor: pointer;
-                position: relative;
-                border: 0;
-                content: '';
-                display: block;
-                padding: 0;
-                background-color: rgba(0, 0, 0, .25);
-                border-radius: 50%;
-                width: 5px;
-                height: 5px;
-            }
-
-            &::after {
-                left: 10px;
-                top: -5px;
-            }
-
-            &::before {
-                right: 10px;
-            }
-        }
-
         &-messages {
             height: calc(100% - 130px);
+            border-radius: 5px;
+            background-color: #eee;
+            overflow: hidden
         }
 
         .ant-empty {
             position: relative;
             top: 25vh;
         }
+    }
+
+    &__account {
+        width: 44px;
+        height: 44px;
+        position: absolute;
+        right: 15px;
+        top: 8px;
     }
 }
