--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -102,8 +102,48 @@
         transform-origin: bottom left;
     }
 
+    &__record-status {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 120px;
+
+        span::after {
+            display: inline-block;
+            content: '';
+            width: 10px;
+            animation: record-animation-text 1.5s ease-in-out infinite;
+        }
+
+        .record-icon {
+            &,
+            &::before {
+                display: block;
+                border-radius: 50%;
+                background-color: #f56b6b;
+            }
+
+            & {
+                position: relative;
+                width: 16px;
+                height: 16px;
+            }
+
+            &::before {
+                width: 22px;
+                height: 22px;
+                content: '';
+                position: absolute;
+                opacity: .5;
+                top: -3px;
+                left: -3px;
+                animation: record-animation 1.5s ease-in-out alternate-reverse infinite;
+            }
+        }
+    }
+
     &__actions {
-        width: 9.5%;
+        width: 11.5%;
         display: flex;
         justify-content: space-between;
 
@@ -115,5 +155,29 @@
                 }
             }
         }
+    }
+}
+
+@keyframes record-animation {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+@keyframes record-animation-text {
+    33% {
+        content: '.'
+    }
+
+    66% {
+        content: '..'
+    }
+
+    99% {
+        content: '...'
     }
 }
