--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -64,9 +64,15 @@
   }
 
   &--image {
-    #{$self}__attachments-item img{
-      width: 100px;
-      height: 100px;
+    #{$self}__attachments-item {
+      img {
+        width: 150px;
+        height: 150px;
+      }
+
+      i {
+        line-height: 11;
+      }
     }
   }
 
@@ -193,11 +199,33 @@
     &-item {
       display: flex;
       margin-right: 5px;
+      position: relative;
+      cursor: pointer;
+
+      &:hover {
+        i {
+          opacity: 1;
+        }
+      }
+
+      i {
+        pointer-events: none;
+        border-radius: 8px;
+        background-color: rgba(0, 0, 0, .5);
+        color: #ffffff;
+        display: block;
+        opacity: 0;
+        transition: opacity .3s ease-out;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        line-height: 4.5;
+      }
 
       img {
         cursor: pointer;
-        width: 45px;
-        height: 45px;
+        width: 64px;
+        height: 64px;
         border-radius: 8px;
       }
     }
