--- a/src/components/Avatar/avatar.scss
+++ b/src/components/Avatar/avatar.scss
@@ -1,7 +1,7 @@
 .avatar {
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    width: 44px;
+    height: 44px;
     
     &--empty {
         color: #ffffff;
