--- a/src/components/WhiteBlock/WhiteBlock.scss
+++ b/src/components/WhiteBlock/WhiteBlock.scss
@@ -4,3 +4,11 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.04204);
   border-radius: 3px;
 }
+
+.verify-block {
+  @media screen and (max-device-width: 480px) {
+    width: 85% !important;
+    position: relative;
+    left: 7%;
+  }
+}
