--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -36,9 +36,29 @@
             justify-content: space-between;
             font-size: 20px;
 
+            & > div {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+
             .anticon-team {
                 margin-right: 10px;
             }
+        }
+
+        &-version {
+            font-size: 12px;
+            opacity: .5;
+        }
+
+        &-name {
+            font-size: 32px;
+        }
+
+        &-logo {
+            width: 44px;
+            height: 44px;
         }
 
         &-search {
