Fix styles for avatar

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -160,5 +160,11 @@
           top: 0;
           right: 0;
         }
+
+        img {
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+        }
     }
 }
